--- a/index.html
+++ b/index.html
@@ -3,126 +3,142 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Elys Keepers - Check Your Delegation</title>
+  <title>Elys Keepers - Delegation Checker</title>
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: #e2e8f0;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }
+
+    body {
+      background: #0f0f13;
+      color: #ffffff;
       min-height: 100vh;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      padding: 30px 20px;
     }
+
     .container {
-      background: #1e1b4b;
+      background: #1a1a24;
       border-radius: 16px;
-      padding: 32px;
       width: 100%;
-      max-width: 520px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+      max-width: 500px;
+      padding: 30px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
     }
+
     h1 {
       text-align: center;
-      color: #c7d2fe;
-      margin-bottom: 24px;
-      font-size: 28px;
+      margin-bottom: 10px;
+      font-size: 2rem;
+      color: #6C47FF;
     }
-    p#totalDelegations {
+
+    .subtitle {
       text-align: center;
-      font-size: 18px;
-      margin-bottom: 32px;
-      color: #94a3b8;
+      font-size: 1rem;
+      color: #b0b0c0;
+      margin-bottom: 30px;
     }
+
     .input-group {
       display: flex;
-      gap: 8px;
-      margin-bottom: 24px;
+      gap: 10px;
     }
+
     input {
-      flex: 1;
+      flex-grow: 1;
       padding: 14px;
-      border: 1px solid #334155;
+      border: 1px solid #3a3a48;
+      background: #252530;
       border-radius: 8px;
-      background: #0f172a;
-      color: #f1f5f9;
-      font-size: 16px;
-    }
-    input:focus {
+      color: white;
+      font-size: 1rem;
       outline: none;
-      border-color: #8b5cf6;
     }
-    button {
-      padding: 14px 24px;
-      background: #7c3aed;
+
+    input:focus {
+      border-color: #6C47FF;
+      box-shadow: 0 0 0 2px rgba(108, 71, 255, 0.25);
+    }
+
+    .check-btn {
+      background: #6C47FF;
       color: white;
       border: none;
+      padding: 0 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 16px;
-      transition: 0.2s;
+      font-weight: 600;
+      transition: all 0.2s;
     }
-    button:hover {
-      background: #9333ea;
+
+    .check-btn:hover {
+      background: #5a3bd9;
     }
-    button:disabled {
-      background: #4c1d95;
-      cursor: not-allowed;
-      opacity: 0.7;
-    }
+
     #result {
-      margin-top: 24px;
-      padding: 16px;
-      border-radius: 8px;
-      background: #0f172a;
-      font-size: 15px;
+      margin-top: 20px;
+      font-size: 1rem;
       line-height: 1.6;
-      max-height: 200px;
-      overflow-y: auto;
       opacity: 0;
+      height: auto;
       transition: opacity 0.3s ease;
     }
+
     #result.show {
       opacity: 1;
+    }
+
+    a {
+      color: #6C47FF;
+      text-decoration: underline;
+    }
+
+    #totalDelegations {
+      text-align: center;
+      font-size: 1.1rem;
+      margin-top: 20px;
+      color: #00d48a;
+      font-weight: 600;
+    }
+
+    .loading {
+      color: #b0b0c0;
+      font-style: italic;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <h1>Check Your Delegation</h1>
-    <p id="totalDelegations">Loading total staked...</p>
+    <h1>Elys Keepers</h1>
+    <p class="subtitle">Verify your delegation</p>
 
     <div class="input-group">
-      <input 
-        type="text" 
-        id="walletAddress" 
-        placeholder="Enter your elys1... wallet address" 
-        autocomplete="off" 
-        autocorrect="off" 
-        spellcheck="false"
-      />
+      <input type="text" id="walletAddress" placeholder="Enter your Elys wallet address" />
       <button class="check-btn" onclick="checkDelegation()">Check</button>
     </div>
 
     <div id="result"></div>
+    <div id="totalDelegations">Loading total staked...</div>
   </div>
 
   <script>
-    // --- ON LOAD: Fetch total staked amount ---
-    document.addEventListener("DOMContentLoaded", () => {
+    // Fetch total delegation on page load
+    window.onload = function () {
       fetchTotalDelegation();
-    });
+    };
 
-    // --- FUNCTION: Fetch Total Staked ---
+    // Get validator info - now using official API
     async function fetchTotalDelegation() {
-      const proxyUrl = "https://corsproxy.io/?";
       const url = "https://api.elys.network/cosmos/staking/v1beta1/validators/elysvaloper197uts40mlzwvcsz7smhhnl2khwdgt67tn70zt0";
-
       try {
-        const response = await fetch(proxyUrl + url);
+        const response = await fetch(url);
         if (!response.ok) throw new Error(`HTTP ${response.status}`);
         const data = await response.json();
 
@@ -136,56 +152,47 @@
       }
     }
 
-    // --- FUNCTION: Check Delegation ---
+    // Check user delegation
     async function checkDelegation() {
       const address = document.getElementById("walletAddress").value.trim();
       const resultDiv = document.getElementById("result");
-      const button = document.querySelector(".check-btn");
+      const checkBtn = document.querySelector(".check-btn");
 
+      // Reset result
       resultDiv.classList.remove("show");
       resultDiv.innerHTML = "";
+      checkBtn.disabled = true;
 
-      // Validate address
-      if (!address) {
-        resultDiv.innerHTML = "Please enter your wallet address.";
+      if (!address.startsWith("elys1") || address.length < 30) {
+        resultDiv.textContent = "Please enter a valid Elys wallet address.";
         resultDiv.style.color = "#ff6b6b";
         resultDiv.classList.add("show");
+        checkBtn.disabled = false;
         return;
       }
 
-      if (!address.startsWith("elys1") || address.length < 39 || address.length > 48) {
-        resultDiv.innerHTML = "❌ Invalid Elys address. Must start with 'elys1' and be 39–48 characters long.";
-        resultDiv.style.color = "#ff6b6b";
-        resultDiv.classList.add("show");
-        return;
-      }
-
-      resultDiv.innerHTML = "🔍 Checking your delegation...";
-      resultDiv.style.color = "#94a3b8";
+      resultDiv.textContent = "Checking...";
+      resultDiv.style.color = "#b0b0c0";
       resultDiv.classList.add("show");
-      button.disabled = true;
 
-      const proxyUrl = "https://corsproxy.io/?";
       const url = `https://api.elys.network/cosmos/staking/v1beta1/delegations/${address}`;
 
       try {
-        console.log("Checking:", address);
-        const response = await fetch(proxyUrl + url);
-
-        if (response.status === 404) {
-          resultDiv.innerHTML = `❌ You are <strong>not</strong> currently delegating to any validator.<br><br>
-            <a href="https://app.elys.network/earn/staking" target="_blank" style="color:#6C47FF; text-decoration:underline;">👉 Delegate to Elys Keepers</a>`;
-          resultDiv.style.color = "#ff6b6b";
-          return;
-        }
+        const response = await fetch(url);
 
         if (!response.ok) {
-          throw new Error(`Network error: ${response.status}`);
+          if (response.status === 404) {
+            resultDiv.innerHTML = `❌ You are <strong>not</strong> currently delegating to any validator.<br><br><a href="https://app.elys.network/earn/staking" target="_blank">Delegate now on Elys App</a>`;
+            resultDiv.style.color = "#ff6b6b";
+            resultDiv.classList.add("show");
+            checkBtn.disabled = false;
+            return;
+          } else {
+            throw new Error("Network Error");
+          }
         }
 
         const data = await response.json();
-        console.log(data);
-
         const delegations = data.delegation_responses || [];
 
         const found = delegations.find(
@@ -194,25 +201,24 @@
 
         if (found) {
           const amount = parseFloat(found.balance.amount) / 1e6;
-          resultDiv.innerHTML = `✅ You are delegating <strong>${amount.toLocaleString()} $ELYS</strong> to <strong>Elys Keepers</strong>!<br><br>Thank you for your trust and support. 🙌`;
+          resultDiv.innerHTML = `✅ You are delegating <strong>${amount.toLocaleString(undefined, { maximumFractionDigits: 2 })} $ELYS</strong> to Elys Keepers! Thank you for your trust.`;
           resultDiv.style.color = "#00d48a";
         } else {
-          resultDiv.innerHTML = `❌ You are <strong>not</strong> currently delegating to Elys Keepers.<br><br>
-            <a href="https://app.elys.network/earn/staking" target="_blank" style="color:#6C47FF; text-decoration:underline;">👉 Delegate now on Elys App</a>`;
+          resultDiv.innerHTML = `❌ You are <strong>not</strong> currently delegating to Elys Keepers.<br><br><a href="https://app.elys.network/earn/staking" target="_blank">Delegate now on Elys App</a>`;
           resultDiv.style.color = "#ff6b6b";
         }
+        resultDiv.classList.add("show");
       } catch (error) {
-        console.error("Error checking delegation:", error);
-        resultDiv.innerHTML = `
-          ❌ Could not load delegation data.<br><br>
-          This could be a temporary network issue.<br>
-          Please try again shortly.
-        `;
+        console.error("Check delegation error:", error);
+        resultDiv.textContent = "Could not fetch data. Please try again later.";
         resultDiv.style.color = "#ff6b6b";
-      } finally {
-        button.disabled = false;
+        resultDiv.classList.add("show");
       }
+
+      checkBtn.disabled = false;
     }
   </script>
+
 </body>
 </html>
+
