--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <p class="text-lg text-gray-400 mb-10">
         We’re not just validators — we’re builders, governors, and long-term supporters of the Elys ecosystem. Stake with us and help shape the future of DeFi interoperability.
       </p>
-      <a href="#delegate" class="btn-primary text-white px-8 py-3 rounded-lg font-semibold inline-block">
+      <a href="https://app.elys.network/earn/staking" class="btn-primary text-white px-8 py-3 rounded-lg font-semibold inline-block">
         Delegate Now
       </a>
     </div>
